--- a/src/main/resources/public/rewriter.css
+++ b/src/main/resources/public/rewriter.css
@@ -50,19 +50,9 @@
 }
 
 .loader {
-  border: 16px solid lightblue;
-  border-top: 16px solid #f16d20;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  animation: spin 2s linear infinite;
   position: absolute;
-  margin-left: 380px;
-  margin-top: 5px;
-  z-index: 999;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  z-index: 9999;
+  margin-top: 200px;
+  margin-left: 470px;
+  opacity: 75%;
 }
